--- a/packages/sn-doc-site-template/package.json
+++ b/packages/sn-doc-site-template/package.json
@@ -2,10 +2,7 @@
   "name": "@sn/doc-site",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "main": "main.ts",
   "keywords": [],
   "author": "iwander",
   "license": "MIT",
