--- a/packages/sn-doc-site/package.json
+++ b/packages/sn-doc-site/package.json
@@ -11,6 +11,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@babel/core": "^7.17.2",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
+    "css-loader": "^6.6.0",
+    "frontmatter": "0.0.3",
+    "less": "^4.1.2",
+    "less-loader": "^10.2.0",
+    "markdown-it": "^12.3.2",
+    "postcss": "^8.4.6",
+    "postcss-loader": "^6.2.1",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
+    "stylus": "^0.56.0",
+    "stylus-loader": "^6.2.0",
     "typescript": "^4.5.5",
     "webpack": "^5.68.0",
     "webpack-dev-server": "^4.7.4"
