--- a/packages/sn-cli/package.json
+++ b/packages/sn-cli/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "@sn/cli",
-  "version": "1.0.0",
+  "name": "starn-cli",
+  "version": "0.0.5",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "type": "module",
+  "bin": {
+    "sn-cli": "./bin.js"
+  },
+  "engines": {
+    "node": "^14.16.0 || >=16.0.0"
+  },
+  "files": [
+    "dist",
+    "bin.js"
+  ],
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc"
@@ -13,9 +23,10 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^9.0.0",
+    "starn-doc-site": "0.0.4",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
-    "@types/node": "^17.0.16"
+    "@types/node": "^17.0.17"
   }
 }
