--- a/packages/sn-node-utils/package.json
+++ b/packages/sn-node-utils/package.json
@@ -1,16 +1,23 @@
 {
-  "name": "@sn/node-utils",
-  "version": "1.0.0",
+  "name": "starn-node-utils",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "dev":"tsc --watch",
+    "dev": "tsc --watch",
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "iwander",
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "typescript": "^4.5.5"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.17"
   }
 }
