--- a/packages/sn-utils/package.json
+++ b/packages/sn-utils/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "@sn/utils",
-  "version": "1.0.0",
+  "name": "starn-utils",
+  "version": "0.0.2",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "module",
   "scripts": {
-    "dev":"tsc --watch",
+    "dev": "tsc --watch",
     "build": "tsc"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "iwander",
+  "license": "MIT",
+  "files": [
+    "dist"
+  ],
   "dependencies": {
     "typescript": "^4.5.5"
   }
